# accessor

./: CHANGES.md  LICENSE.md  README.org  accessor.opam
applicative_without_return/: README.org
applicative_without_return/src/: applicative_without_return.ml  applicative_without_return.mli  applicative_without_return_intf.ml  dune
doc/: accessor_subtyping_diagram.ml  design.org  dune  tutorial.mdx  tutorial.mlt
src/: accessor.ml  accessor.mli  applicative_signatures_intf.ml  custom_mappings_intf.ml  design.org  dictionary.ml  dictionary.mli  dune  ident.ml  ident.mli  import.ml  index.ml  index.mli  many.ml  many.mli  many_getter.ml  many_getter.mli  mapping.ml  mapping.mli  nonempty.ml  nonempty.mli  nonempty_getter.ml  nonempty_getter.mli  subtyping.ml  subtyping.mli  subtyping_intf.ml
test/: accessor_tests.ml  dune  import.ml
test_helpers/: accessor_test_helpers.ml  accessor_test_helpers.mli  dune  import.ml
