(alias (name DEFAULT)
 (deps %{workspace_root}/app/make-corrected-file/bin/main.exe
  accessor_subtyping_diagram.exe subtyping.svg)
 (action
  (bash
   "%{workspace_root}/lib/accessor/doc/accessor_subtyping_diagram.exe | tred | dot -Tsvg | %{workspace_root}/app/make-corrected-file/bin/main.exe subtyping.svg")))

(executables (names accessor_subtyping_diagram) (libraries core accessor)
 (preprocess (pps ppx_jane)))