(rule
 (targets subtyping.svg)
 (deps accessor_subtyping_diagram.exe)
 (action
  (bash
    "%{workspace_root}/lib/accessor/doc/accessor_subtyping_diagram.exe | tred | dot -Tsvg > subtyping.svg")))

(executables
 (modes byte exe)
 (names accessor_subtyping_diagram)
 (libraries accessor core)
 (preprocess
  (pps ppx_jane)))
